fix(ui): Finaliza o polimento de cores para os modos claro e escuro

--- a/index.html
+++ b/index.html
@@ -468,6 +468,22 @@
         .dark .prompt-description-content { color: #d1d5db; }
         .dark pre { background-color: #374151 !important; color: #d1d5db; }
         .dark #darkModeToggle { color: #9ca3af; }
+
+        /* Correção Específica para Modo Escuro */
+        /* Garante que o input do tema siga as regras */
+        .dark #videoTheme.card-background {
+            background-color: #374151 !important; 
+            border-color: #4b5563 !important; 
+        }
+        /* Garante que o container dos botões de geração siga as regras */
+        .dark #scriptGenerationControls.card-background {
+            background-color: #1f2937 !important; /* Cinza 800 */
+            border-top: 1px solid #4b5563 !important; /* Adiciona uma borda superior para separar */
+            border-left: none !important;
+            border-right: none !important;
+            border-bottom: none !important;
+        }
+
         /* ========================================================== */
         /* ==================== ESTILOS TOOLTIP ===================== */
         /* ========================================================== */
@@ -614,7 +630,7 @@
             z-index: 10; /* Garante que fique acima do conteúdo que rola */
         }
         .dark #scriptGenerationControls {
-            background-color: rgba(31, 41, 55, 0.95); /* Gray-800 com transparência */
+            /* background-color e border-top já definidos acima */
         }
 
         /* ========================================================== */
@@ -859,7 +875,7 @@
                             <button id="generateOutlineBtn" class="btn btn-secondary btn-small">Criar Esboço</button>
                         </div>
                         <div id="outlineContent">
-                             <div class="asset-card-placeholder text-sm">Clique em 'Criar Esboço' para a IA planejar a estrutura do roteiro.</div>
+                             <div class="asset-card-placeholder text-sm text-gray-400 dark:text-gray-600">Clique em 'Criar Esboço' para a IA planejar a estrutura do roteiro.</div>
                         </div>
                     </div>
 
@@ -896,7 +912,7 @@
                             <button id="generateDescriptionBtn" class="btn btn-secondary btn-small">Gerar</button>
                         </div>
                         <div id="videoDescriptionContent">
-                             <div class="asset-card-placeholder">Clique em 'Gerar' para ver a descrição</div>
+                             <div class="asset-card-placeholder text-gray-400 dark:text-gray-600">Clique em 'Gerar' para ver a descrição</div>
                         </div>
                     </div>
 
@@ -907,7 +923,7 @@
                             <button id="generateTitlesAndThumbnailsBtn" class="btn btn-secondary btn-small">Gerar</button>
                         </div>
                         <div id="titlesThumbnailsContent">
-                             <div class="asset-card-placeholder">Clique em 'Gerar' para ver as sugestões</div>
+                             <div class="asset-card-placeholder text-gray-400 dark:text-gray-600">Clique em 'Gerar' para ver as sugestões</div>
                         </div>
                     </div>
 
@@ -2204,12 +2220,12 @@ ${scriptContent}
                 sec.classList.remove('animate-fade-in'); // Remove a classe de animação ao resetar
             });
             // Limpar o cartão do esboço
-            elements.outlineContent.innerHTML = `<div class="asset-card-placeholder text-sm">Clique em 'Criar Esboço' para a IA planejar a estrutura do roteiro.</div>`;
+            elements.outlineContent.innerHTML = `<div class="asset-card-placeholder text-sm text-gray-400 dark:text-gray-600">Clique em 'Criar Esboço' para a IA planejar a estrutura do roteiro.</div>`;
             strategicOutline = null; // Reseta o esboço estratégico
 
             // Limpar os cartões de recursos e restaurar os placeholders
-            document.getElementById('titlesThumbnailsContent').innerHTML = '<div class="asset-card-placeholder">Clique em \'Gerar\' para ver as sugestões</div>';
-            document.getElementById('videoDescriptionContent').innerHTML = '<div class="asset-card-placeholder">Clique em \'Gerar\' para ver a descrição</div>';
+            document.getElementById('titlesThumbnailsContent').innerHTML = '<div class="asset-card-placeholder text-gray-400 dark:text-gray-600">Clique em \'Gerar\' para ver as sugestões</div>';
+            document.getElementById('videoDescriptionContent').innerHTML = '<div class="asset-card-placeholder text-gray-400 dark:text-gray-600">Clique em \'Gerar\' para ver a descrição</div>';
             // Removed storyboardContent reset
 
             allImagePrompts = {}; // Limpa todos os prompts de imagem
@@ -2377,8 +2393,8 @@ ${scriptContent}
                     if (document.getElementById('conclusionSection').innerHTML.trim()) markButtonAsCompleted('conclusionBtn');
                     if (document.getElementById('ctaSection').innerHTML.trim()) markButtonAsCompleted('generateCTABtn');
                     // Asset buttons (check if content is not placeholder)
-                    if (document.getElementById('videoDescriptionContent').innerHTML.trim() !== '<div class="asset-card-placeholder">Clique em \'Gerar\' para ver a descrição</div>') markButtonAsCompleted('generateDescriptionBtn');
-                    if (document.getElementById('titlesThumbnailsContent').innerHTML.trim() !== '<div class="asset-card-placeholder">Clique em \'Gerar\' para ver as sugestões</div>') markButtonAsCompleted('generateTitlesAndThumbnailsBtn');
+                    if (document.getElementById('videoDescriptionContent').innerHTML.trim() !== '<div class="asset-card-placeholder text-gray-400 dark:text-gray-600">Clique em \'Gerar\' para ver a descrição</div>') markButtonAsCompleted('generateDescriptionBtn');
+                    if (document.getElementById('titlesThumbnailsContent').innerHTML.trim() !== '<div class="asset-card-placeholder text-gray-400 dark:text-gray-600">Clique em \'Gerar\' para ver as sugestões</div>') markButtonAsCompleted('generateTitlesAndThumbnailsBtn');
                     // Removed storyboardContent check for completion
 
 
