--- a/index.html
+++ b/index.html
@@ -293,7 +293,6 @@
             margin: 1rem auto;
         }
         .individual-prompt-block {
-            /* Removido background-color e border para usar .card-background */
             border-radius: 8px;
             padding: 1rem;
             margin-bottom: 1rem;
@@ -751,7 +750,7 @@
             </button>
         </div>
         
-        <h1 class="text-4xl font-extrabold text-center text-gray-800 dark:text-gray-100 mb-2">Gerador de Roteiros Virais v2.0</h1>
+        <h1 class="text-4xl font-extrabold text-gray-800 dark:text-gray-100 text-center mb-2">Gerador de Roteiros Virais v2.0</h1>
         <p class="text-center text-gray-500 dark:text-gray-400 mb-8">O seu painel de controle para conteúdo de alto impacto.</p>
         
         <!-- Seção de Inputs da Aplicação -->
@@ -1868,7 +1867,7 @@ Trecho do roteiro:
                     allImagePrompts[sectionElementId].forEach(promptData => {
                         const styleBlockContent = promptData.styleBlock || '';
                         const promptHtml = `
-                            <div class="individual-prompt-block card-background">
+                            <div class="individual-prompt-block bg-white dark:bg-gray-800 card-background">
                                 <div class="flex items-center justify-between mb-2">
                                     <p class="prompt-time">${promptData.time} - Cena ${promptData.sequence}</p>
                                     <button class="copy-btn" onclick="copyTextToClipboard(document.getElementById('prompt-content-${sectionElementId}-${promptData.sequence}').textContent + ' ' + document.getElementById('style-block-${sectionElementId}-${promptData.sequence}').textContent); window.showCopyFeedback(this)">Copiar</button>
@@ -1876,7 +1875,7 @@ Trecho do roteiro:
                                 <p class="prompt-phrase">${promptData.scriptPhrase}</p>
                                 <p class="prompt-description-label">${imageDescriptionLabels[elements.languageSelect.value] || 'Image Description:'}</p>
                                 <p id="prompt-content-${sectionElementId}-${promptData.sequence}" class="prompt-description-content">${promptData.imageDescription}</p>
-                                <pre id="style-block-${sectionElementId}-${promptData.sequence}" class="text-xs text-gray-600 bg-gray-100 p-2 rounded-md overflow-auto">${styleBlockContent}</pre>
+                                <pre id="style-block-${sectionElementId}-${promptData.sequence}" class="text-xs bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 p-2 rounded-md overflow-auto">${styleBlockContent}</pre>
                             </div>
                         `;
                         promptContainer.innerHTML += promptHtml;
@@ -2345,7 +2344,7 @@ ${scriptContent}
                 promptsData.forEach(promptData => {
                     const styleBlockContent = promptData.styleBlock || '';
                     const promptHtml = `
-                        <div class="individual-prompt-block card-background">
+                        <div class="individual-prompt-block bg-white dark:bg-gray-800 card-background">
                             <div class="flex items-center justify-between mb-2">
                                 <p class="prompt-time">${promptData.time} - Cena ${promptData.sequence}</p>
                                 <button class="copy-btn" onclick="copyTextToClipboard(document.getElementById('prompt-content-${sectionElementId}-${promptData.sequence}').textContent + ' ' + document.getElementById('style-block-${sectionElementId}-${promptData.sequence}').textContent); window.showCopyFeedback(this)">Copiar</button>
@@ -2353,7 +2352,7 @@ ${scriptContent}
                             <p class="prompt-phrase">${promptData.scriptPhrase}</p>
                             <p class="prompt-description-label">${imageDescriptionLabels[elements.languageSelect.value] || 'Image Description:'}</p>
                             <p id="prompt-content-${sectionElementId}-${promptData.sequence}" class="prompt-description-content">${promptData.imageDescription}</p>
-                            <pre id="style-block-${sectionElementId}-${promptData.sequence}" class="text-xs text-gray-600 bg-gray-100 p-2 rounded-md overflow-auto">${styleBlockContent}</pre>
+                            <pre id="style-block-${sectionElementId}-${promptData.sequence}" class="text-xs bg-gray-100 dark:bg-gray-700 text-gray-600 dark:text-gray-300 p-2 rounded-md overflow-auto">${styleBlockContent}</pre>
                         </div>
                     `;
                     promptContainer.innerHTML += promptHtml;
