--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
             transition: max-height 0.4s ease-in-out, padding 0.4s ease-in-out;
             padding: 0 1.5rem; /* Padding vertical zero quando fechado */
         }
+        /* Força o fundo correto para o corpo do acordeão */
+        .accordion-body {
+            background-color: #ffffff; /* Fundo branco padrão (Modo Claro) */
+        }
+        /* Define a cor correta para o fundo do corpo no Modo Escuro */
+        .dark .accordion-body {
+            background-color: #1f2937; /* Mesmo fundo do container (Cinza 800) */
+        }
         .accordion-body.open {
             max-height: 5000px; /* Valor grande para "abrir" */
             padding: 1rem 1.5rem 1.5rem; /* Padding quando aberto */
