--- a/index.html
+++ b/index.html
@@ -1567,7 +1567,17 @@
             const selectedLanguage = elements.languageSelect.value;
             const narrativeStyle = elements.narrativeStyle.value;
 
-            let prompt = `${baseContext}\n\nGenerate the **${sectionTitle}** section of the video script. Focus on making it highly engaging and suitable for a viral video. Ensure the tone and content align with the channel and audience.`;
+            let prompt = `${baseContext}
+
+You are a master screenwriter, a true virtuoso of words. Your task is to write the **${sectionTitle}** section of the script.
+
+**Your writing must be magnetic and professional. Follow these core principles:**
+1.  **Dynamic Rhythm and Pacing:** Write with a natural, captivating cadence. Use a mix of short, punchy sentences for impact and longer, flowing sentences for description and atmosphere. Avoid monotony at all costs.
+2.  **"Show, Don't Tell" on a Deeper Level:** Don't just state facts. Use vivid, sensory language to paint a picture in the viewer's mind. Evoke emotions and create a tangible experience through your words.
+3.  **Human Connection:** Weave the information into a narrative that connects with the viewer on a personal level. Use "you" to speak directly to them. Ground abstract concepts in relatable human experiences and emotions.
+4.  **Rhetorical Techniques:** Intelligently use rhetorical questions, powerful analogies, and striking metaphors to make the content more memorable and thought-provoking.
+5.  **Hook Reinforcement:** If there is a central question, subtly remind the viewer of the mystery or the promise made in the introduction to keep them hooked and eager for the resolution.
+`;
             let maxTokens = 2000;
 
             if (outlineDirective) {
