--- a/index.html
+++ b/index.html
@@ -1571,12 +1571,7 @@
 
 You are a master screenwriter, a true virtuoso of words. Your task is to write the **${sectionTitle}** section of the script.
 
-**Your writing must be magnetic and professional. Follow these core principles:**
-1.  **Dynamic Rhythm and Pacing:** Write with a natural, captivating cadence. Use a mix of short, punchy sentences for impact and longer, flowing sentences for description and atmosphere. Avoid monotony at all costs.
-2.  **"Show, Don't Tell" on a Deeper Level:** Don't just state facts. Use vivid, sensory language to paint a picture in the viewer's mind. Evoke emotions and create a tangible experience through your words.
-3.  **Human Connection:** Weave the information into a narrative that connects with the viewer on a personal level. Use "you" to speak directly to them. Ground abstract concepts in relatable human experiences and emotions.
-4.  **Rhetorical Techniques:** Intelligently use rhetorical questions, powerful analogies, and striking metaphors to make the content more memorable and thought-provoking.
-5.  **Hook Reinforcement:** If there is a central question, subtly remind the viewer of the mystery or the promise made in the introduction to keep them hooked and eager for the resolution.
+**Your writing must be magnetic and professional. Follow these core principles:**1.  **Dynamic Rhythm and Pacing:** Write with a natural, captivating cadence. Use a mix of short, punchy sentences for impact and longer, flowing sentences for description and atmosphere. Avoid monotony at all costs.2.  **"Show, Don't Tell" on a Deeper Level:** Don't just state facts. Use vivid, sensory language to paint a picture in the viewer's mind. Evoke emotions and create a tangible experience through your words.3.  **Human Connection:** Weave the information into a narrative that connects with the viewer on a personal level. Use "you" to speak directly to them. Ground abstract concepts in relatable human experiences and emotions.4.  **Rhetorical Techniques:** Intelligently use rhetorical questions, powerful analogies, and striking metaphors to make the content more memorable and thought-provoking.5.  **Hook Reinforcement:** If there is a central question, subtly remind the viewer of the mystery or the promise made in the introduction to keep them hooked and eager for the resolution.
 `;
             let maxTokens = 2000;
 
@@ -2191,14 +2186,16 @@ ${scriptContent}
 
             const thumbnailsString = generatedTitlesAndThumbnails.thumbnails.map(t => `Título: ${t.title}, Descrição: ${t.description}`).join('\n---\n');
             
+            // --- INÍCIO DA CORREÇÃO NO PROMPT ---
             const prompt = `Você é um Diretor de Arte e especialista em YouTube. Analise a seguinte lista de ideias para thumbnails. Para cada uma, forneça uma "nota de potencial visual" de 0 a 10 (onde 10 é uma imagem irresistível) e uma sugestão curta para maximizar o impacto visual, focando em contraste, emoção facial, clareza e curiosidade.
 
-            Responda APENAS com um array JSON. Cada objeto no array deve ter as chaves "ideia_original", "nota_visual" e "sugestao_melhora".
+            Responda APENAS com um array JSON. Cada objeto no array deve ter as chaves "titulo", "nota_visual" e "sugestao_melhora". A chave "titulo" DEVE conter o título original da ideia que você analisou.
 
             Ideias para analisar:
             ---
             ${thumbnailsString}
             ---`;
+            // --- FIM DA CORREÇÃO NO PROMPT ---
 
             try {
                 const rawResult = await callGroqAPI(prompt, 2500);
@@ -2207,13 +2204,15 @@ ${scriptContent}
 
                 let analysisHtml = '<div class="space-y-4">';
                 analysis.forEach(item => {
+                    // --- INÍCIO DA CORREÇÃO NA RENDERIZAÇÃO ---
                     analysisHtml += `
                         <div class="p-3 card-background rounded-md shadow-sm">
-                            <p class="font-semibold text-gray-800 dark:text-gray-200">${item.titulo_original}</p>
+                            <p class="font-semibold text-gray-800 dark:text-gray-200">"${item.titulo || 'Ideia Sem Título'}"</p>
                             <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Nota de Potencial Visual:</strong> <span class="text-indigo-500 font-bold">${item.nota_visual} / 10</span></p>
                             <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Sugestão:</strong> ${item.sugestao_melhora}</p>
                         </div>
                     `;
+                    // --- FIM DA CORREÇÃO NA RENDERIZAÇÃO ---
                 });
                 analysisHtml += '</div>';
                 resultContainer.innerHTML = analysisHtml;
@@ -2222,7 +2221,6 @@ ${scriptContent}
                 resultContainer.innerHTML = `<p class="text-red-500 text-sm">Falha ao analisar as thumbnails: ${error.message}</p>`;
             }
         };
-
         /**
          * Gera a descrição do vídeo e hashtags.
          */
