--- a/index.html
+++ b/index.html
@@ -1116,11 +1116,17 @@
         // Bloco de estilo cinematográfico para prompts de imagem
         const CINEMATIC_STYLE_BLOCK = `
 **[ESTILO CINEMATOGRÁFICO]**
-**Style:** Hyper-realistic film still, captured as a final, polished frame from a high-budget movie. Masterful visual storytelling. The composition is deliberate and powerful, using principles of photographic storytelling.
-**Lighting:** Naturalistic and dramatic lighting. Strong use of light and shadow (chiaroscuro) to create depth and mood. The light source feels authentic to the environment, whether it's harsh sunlight, soft window light, or moody candlelight. The image possesses an organic, high-fidelity visual quality, with rich depth and subtle lens characteristics.
-**Details & Textures:** Extreme attention to micro-details. Hyper-realistic textures are paramount: visible skin pores, fabric weaves, material imperfections (scratches on metal, weathering on stone, dust on surfaces). Every element feels tangible and real, captured with meticulous precision.
-**Color & Mood:** Rich, cinematic color grading. The color palette is carefully controlled to enhance the story and emotion of the scene. The overall mood is immersive, evocative, and deeply atmospheric.
-**Negative Prompt:** --no cgi, 3d, render, painting, illustration, animation, video game, digital art, cartoon, blurry, low quality, bad anatomy, deformed, ugly, watermark, text, logo, camera, film equipment, tripod, lens, studio, set, production, behind the scenes, monitor, screen, lights, crew
+**Style:**
+Hyper-realistic photograph, a final, polished image. Masterful visual storytelling. The composition is deliberate and powerful, using principles of photographic storytelling.
+
+**Lighting:**
+Dramatic and naturalistic lighting. Strong use of light and shadow (chiaroscuro) to create depth and mood. The light source is an inherent part of the environment (e.g., sunlight filtering through trees, a single lamp in a dark room, moonlight). The image possesses an organic, high-fidelity visual quality, with rich depth and subtle lens characteristics.
+
+**Details & Textures:**
+Extreme attention to micro-details. Hyper-realistic textures are paramount: visible skin pores, fabric weaves, material imperfections (scratches on metal, weathering on stone, dust on surfaces). Every element feels tangible and real, captured with meticulous precision.
+
+**Color & Mood:**
+Rich, high-quality color grading. The color palette is carefully controlled to enhance the story and emotion of the scene. The overall mood is immersive, evocative, and deeply atmospheric.
 `;
         // Labels para descrição de imagem em diferentes idiomas
         const imageDescriptionLabels = { 'pt-br': 'Descrição da Imagem:', 'pt-pt': 'Descrição da Imagem:', 'en': 'Image Description:' };
