--- a/index.html
+++ b/index.html
@@ -1116,17 +1116,7 @@
         // Bloco de estilo cinematográfico para prompts de imagem
         const CINEMATIC_STYLE_BLOCK = `
 **[ESTILO CINEMATOGRÁFICO]**
-**Style:**
-Hyper-realistic photograph, a final, polished image. Masterful visual storytelling. The composition is deliberate and powerful, using principles of photographic storytelling.
-
-**Lighting:**
-Dramatic and naturalistic lighting. Strong use of light and shadow (chiaroscuro) to create depth and mood. The light source is an inherent part of the environment (e.g., sunlight filtering through trees, a single lamp in a dark room, moonlight). The image possesses an organic, high-fidelity visual quality, with rich depth and subtle lens characteristics.
-
-**Details & Textures:**
-Extreme attention to micro-details. Hyper-realistic textures are paramount: visible skin pores, fabric weaves, material imperfections (scratches on metal, weathering on stone, dust on surfaces). Every element feels tangible and real, captured with meticulous precision.
-
-**Color & Mood:**
-Rich, high-quality color grading. The color palette is carefully controlled to enhance the story and emotion of the scene. The overall mood is immersive, evocative, and deeply atmospheric.
+Ultra-realistic, high-resolution photographic image. Captured with natural lighting and cinematic composition. Rich textures and fine surface details — visible skin pores, fabric fibers, weathered materials, realistic reflections, and organic imperfections. Sharp focus with subtle depth of field. True-to-life colors with refined tonal range. Every element should look authentic, physical, and believable — as if taken with a high-end DSLR camera. No exaggerated features, no artificial smoothness — only pure, grounded realism.
 `;
         // Labels para descrição de imagem em diferentes idiomas
         const imageDescriptionLabels = { 'pt-br': 'Descrição da Imagem:', 'pt-pt': 'Descrição da Imagem:', 'en': 'Image Description:' };
